# kblswitch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CMAKE.md  build.bat  build_cmake.bat  kblswitch.c  kblswitch.ini  readme.md  resource.h  resource.rc  resource.res
